# minalg

./: .gitignore  CMakeLists.txt  README.md
include/minalg/: linear.hpp  matrix.hpp
src/: CMakeLists.txt  linear.cpp  matrix.cpp  util.cpp  util.hpp
tests/: CMakeLists.txt  linear_test.cpp  matrix_test.cpp
